frontend: Fix whitespace handling in output
Allow wrapping.

--- a/static/index.css
+++ b/static/index.css
@@ -150,7 +150,7 @@ a {
     padding-top: 5%;
     padding-bottom: 5%;
     min-height: 300px;
-    white-space: pre;
+    white-space: pre-wrap;
 
     border-bottom-style: solid;
     border-bottom-color: #c0c0c0;
